<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/darkblue"
        android:text="@string/travel_expense"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="35sp">

    </TextView>


    <EditText
        android:id="@+id/edit_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:autofillHints="creditCardNumber"
        android:hint="@string/distance"
        android:inputType="numberDecimal"
        android:padding="15dp"
        android:textColor="@color/black">

    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_kilometers"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="15sp">

    </TextView>


    <EditText
        android:id="@+id/edit_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:autofillHints="creditCardNumber"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:padding="15dp"
        android:textColor="@color/black">

    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price_per_liter"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="15sp">

    </TextView>


    <EditText
        android:id="@+id/edit_autonomy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:autofillHints="creditCardNumber"
        android:hint="@string/autonomy"
        android:inputType="numberDecimal"
        android:padding="15dp"
        android:textColor="@color/black">

    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kilometer_per_liter"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="15sp">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="22dp"
        android:text="@string/your_total_expense_will_be"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp">

    </TextView>

    <TextView
        android:id="@+id/text_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/value"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#212F3C"
        android:textSize="40sp">

    </TextView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="128dp"
        android:layout_marginEnd="128dp"
        android:backgroundTint="@color/darkblue"
        android:padding="15dp"
        android:text="@string/calculate"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp">

    </androidx.appcompat.widget.AppCompatButton>

</LinearLayout>